@@ -643,7 +643,9 @@ content_merger::get_file_encoding(file_path const & path,
                                   roster_t const & ros)
 {
   attr_value v;
-  if (ros.get_attr(path, constants::encoding_attribute, v))
+  split_path sp;
+  path.split(sp);
+  if (ros.get_attr(sp, constants::encoding_attribute, v))
     return v();
   return constants::default_encoding;
 }
@@ -653,7 +655,9 @@ content_merger::attribute_manual_merge(file_path const & path,
                                        roster_t const & ros)
 {
   attr_value v;
-  if (ros.get_attr(path, constants::manual_merge_attribute, v)
+  split_path sp;
+  path.split(sp);
+  if (ros.get_attr(sp, constants::manual_merge_attribute, v)
       && v() == "true")
     return true;
   return false; // default: enable auto merge
